@@ -5,7 +5,7 @@ man1dir=$(MANDIR)/man1
 
 TARGET=gatling httpbench dl bindbench mmapbench forkbench pthreadbench \
 mktestdata manymapbench ioerr bench tlsgatling forksbench cgi getlinks \
-acc
+acc hcat
 
 all: $(TARGET)
 
